[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Goomba.gd" type="Script" id=1]
[ext_resource path="res://sprites/goomba.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.8
height = 12.4

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.72175, 2.77459 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=5]
resource_name = "dead"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 4, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 6 ), Vector2( 0, 8 ) ]
}

[node name="Goomba" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Kill" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -8.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="GoombaTurnaround" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoombaTurnaround"]
visible = false
shape = SubResource( 2 )

[node name="PlayerDamage" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDamage"]
shape = SubResource( 3 )

[node name="Terrain" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -3, 0 )
scale = Vector2( 1.3, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 5 )
[connection signal="body_entered" from="Kill" to="." method="_on_body_entered"]
[connection signal="body_entered" from="GoombaTurnaround" to="." method="_on_Enemy_body_entered"]
[connection signal="body_entered" from="PlayerDamage" to="." method="_on_Area2D2_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
